# dif

./: CONTRIBUTING.md  Cargo.toml  README.md
docs/: ARCHITECTURE.md  PROJECT_CONTEXT.md
src/: app.rs  diff.rs  git.rs  highlight.rs  input.rs  keymap.rs  layout.rs  lib.rs  main.rs  settings.rs  terminal.rs  ui.rs
src/app/: status.rs  util.rs
src/ui/: diff.rs  mod.rs  modal.rs  palette.rs  sidebar.rs
tests/: app_transitions.rs
