[package]
name = "dif"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
syntect = "5.2"
toml = "0.8"
portable-pty = "0.8"
vt100 = "0.15"
arboard = "3.4"
